--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "^3.15.0",
+    "eslint-config-standard-react": "^4.2.0",
     "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.9.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
