--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
     "dev": "webpack && node app",
-    "build": "SET NODE_ENV=production webpack && node app"
+    "dev:watch": "webpack --watch",
+    "dev:run": "node app"
+    "build": "SET NODE_ENV=production webpack && node app",
+    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.9.8",
     "express-hbs": "^0.7.11",
     "express-params": "0.0.3",
@@ -24,6 +28,7 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
