--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "nap-webdev-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "Test App for Net-A-Porter",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app",
+    "start": "npm run build && node app",
     "dev": "webpack && node app",
     "dev:watch": "webpack --watch",
-    "dev:run": "node app"
-    "build": "SET NODE_ENV=production webpack && node app",
-    
+    "build": "NODE_ENV=production webpack",
+    "test": "npm run test:react && npm run test:node",
+    "test:react": "mocha --recursive ./components/*.spec.js",
+    "test:node": "mocha --recursive ./test/**/*.spec.js",
+    "test:one": "mocha",
+    "test:watch": "mocha --watch",
+    "test:coverage:react": "rimraf coverage && babel-node ./node_modules/.bin/isparta cover --include \"**/*.js*\" --include-all-sources --report html _mocha -- components/**/*.spec.js",
+    "test:coverage:node": "rimraf coverage && babel-node ./node_modules/.bin/isparta cover --include \"routes/**/*.js\" --report html _mocha -- test/**/*.spec.js",
+    "lint": "npm run lint:react && npm run lint:node",
+    "lint:react": "eslint ./components/*",
+    "lint:node": "eslint ./routes/*"
   },
   "author": "",
   "license": "ISC",
@@ -22,22 +29,32 @@
     "lodash": "^2.4.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
     "request": "^2.46.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
+    "babel-plugin-rewire": "^1.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
+    "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-config-standard-react": "^4.2.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.9.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
+    "jsdom": "^9.11.0",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2",
+    "rimraf": "^2.6.0",
+    "sinon": "^1.17.7",
+    "webpack": "^2.2.1"
   }
 }
