--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && node app",
     "dev": "webpack && node app",
     "dev:watch": "webpack --watch",
-    "build": "NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "npm run test:react && npm run test:node",
     "test:react": "mocha --recursive ./components/*.spec.js",
     "test:node": "mocha --recursive ./test/**/*.spec.js",
@@ -42,6 +42,8 @@
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
+    "compression": "^1.6.2",
+    "cross-env": "^3.1.4",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-config-standard-react": "^4.2.0",
