--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^2.4.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "request": "^2.46.0"
+    "request": "^2.46.0",
+    "compression": "^1.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -42,7 +43,6 @@
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
-    "compression": "^1.6.2",
     "cross-env": "^3.1.4",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
